# xiaoya-teacher-mcp-server

./: .editorconfig  .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/xiaoya_teacher_mcp_server/: config.py  field_descriptions.py  main.py
src/xiaoya_teacher_mcp_server/tools/: __init__.py  status.py
src/xiaoya_teacher_mcp_server/tools/group/: __init__.py  query.py  update.py
src/xiaoya_teacher_mcp_server/tools/questions/: __init__.py  create.py  delete.py  normalize.py  query.py  update.py
src/xiaoya_teacher_mcp_server/tools/resources/: __init__.py  create.py  delete.py  normalize.py  query.py  update.py
src/xiaoya_teacher_mcp_server/tools/task/: __init__.py  attachments.py  grade.py  query.py
src/xiaoya_teacher_mcp_server/types/: __init__.py  enums.py  question_models.py  resource_models.py  task_models.py  types.py
src/xiaoya_teacher_mcp_server/utils/: client.py  logging.py  response.py  rich_text.py  upload.py
tests/xiaoya_teacher_mcp_server/: test_group.py  test_question.py  test_resource.py  test_status.py  test_task.py  test_upload.py  test_utils.py
xiaoya-teacher-skill/: SKILL.md
xiaoya-teacher-skill/agents/: openai.yaml
xiaoya-teacher-skill/references/: operations.md  setup.md  title_rich_text.md
xiaoya_teacher_mcp_server/: config.py  main.py
xiaoya_teacher_mcp_server/tools/: __init__.py
xiaoya_teacher_mcp_server/tools/group/: query.py  update.py
xiaoya_teacher_mcp_server/tools/questions/: create.py  delete.py  query.py  update.py
xiaoya_teacher_mcp_server/tools/resources/: __init__.py  create.py  delete.py  query.py  update.py
xiaoya_teacher_mcp_server/tools/task/: __init__.py  query.py
xiaoya_teacher_mcp_server/types/: types.py
xiaoya_teacher_mcp_server/utils/: response.py
