[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaoya-teacher-mcp-server"
version = "1.3.2"
description = "小雅教育管理MCP服务器 - 专为教师设计,提供课程资源管理和试题创建工具"
authors = [{ name = "Sav1ouR520", email = "3300233150@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "teacher", "education", "xiaoya"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "markitdown>=0.1.5,<1",
    "mcp>=1.26,<2",
    "requests>=2.32.5,<3",
]

[project.optional-dependencies]
full = ["markitdown[all]>=0.1.5,<1"]

[project.urls]
Homepage = "https://github.com/Sav1ouR520/xiaoya-teacher-mcp-server"
Repository = "https://github.com/Sav1ouR520/xiaoya-teacher-mcp-server"

[project.scripts]
xiaoya-teacher-mcp-server = "xiaoya_teacher_mcp_server.main:main"

[tool.hatch.build]
ignore-vcs = true
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.hatch.build.targets.sdist]
only-include = [
    "/src/xiaoya_teacher_mcp_server",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xiaoya_teacher_mcp_server"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = ["pytest>=8.4.2,<9"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
